myapp-old/log.log

> myapp@0.0.1 preview
> vite preview --port 80 --host

file:///home/stemmi/WebsiteV2/myapp/node_modules/.pnpm/vite@5.2.11_@types+node@20.12.11/node_modules/vite/bin/vite.js:7
    await import('source-map-support').then((r) => r.default.install())
    ^^^^^

SyntaxError: Unexpected reserved word
[90m    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)[39m
[90m    at async link (internal/modules/esm/module_job.js:42:21)[39m
v12.22.9
Cannot exec 'nvm': No such file or directory
Cannot exec 'nvm use 22.1.0 && npm run preview': No such file or directory
./start.sh: 1: nvm: not found

> myapp@0.0.1 preview
> vite preview --port 80 --host

file:///home/stemmi/WebsiteV2/myapp/node_modules/.pnpm/vite@5.2.11_@types+node@20.12.11/node_modules/vite/bin/vite.js:7
    await import('source-map-support').then((r) => r.default.install())
    ^^^^^

SyntaxError: Unexpected reserved word
[90m    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)[39m
[90m    at async link (internal/modules/esm/module_job.js:42:21)[39m
